--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,17 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="https://use.fontawesome.com/ca269b1bfe.js"></script>
 
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"> -->
+    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+    <link rel="stylesheet" href="assets/css/Material.css">
+
 </head>
 
 <body>
     <app-root></app-root>
+
 </body>
 
 </html>
