fix bugs & improve responsivity

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 <script src="https://use.fontawesome.com/ca269b1bfe.js"></script>
 </head>
 
-<body>
+<body class="mat-typography">
     <app-root></app-root>
 
 </body>
